ingress/case/apple-banana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-banana-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: apple.local.com
      http:
        paths:
        - backend:
            service:
              name: apple-service
              port:
                number: 5678
          path: /
          pathType: Prefix

    - host: banana.local.com
      http:
        paths:
        - backend:
            service:
              name: banana-service
              port:
                number: 5678
          path: /
          pathType: Prefix
